5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1575_1332.log
== TEST (2019-03-12 11:58:27) 
-- CODE:
aresta = 5
area = 3/2*3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3a**2
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:02) 
-- CODE:
aresta = 5
area = 3/2*3a**1/3a
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3a**1/3a
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:26) 
-- CODE:
aresta = 5
area = 3/2*3a ** 1/3a
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*3a ** 1/3a
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:51:17) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(area, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:52:45) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(3/2*3*5 ** 1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:52:48) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(3/2*3*5 ** 1/3*5, 4))
-- EXECUTION TIME:
0.215169
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:53:42) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(3/2*3*5 ** 1/3*5, 4))
-- EXECUTION TIME:
0.152598
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:53:53) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(3/2*3*5**1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:53:57) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(3/2*3*5**1/3*5, 4))
-- EXECUTION TIME:
0.17519
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:54:07) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5
 
print(round(3/2*3*5**1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:55:16) 
-- CODE:
print(round(3/2*3*5 ** 1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:55:22) 
-- CODE:
print(round(3/2*3*5 ** 1/3*5, 4))
-- EXECUTION TIME:
0.184369
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:56:21) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5

print(round(3/2*3*5 ** 1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:56:31) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5


-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:56:34) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5


-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:57:13) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5

print(round(3/2*3*5 ** 1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 18:57:20) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5

print(round(3/2*3*5 ** 1/3*5, 4))
-- EXECUTION TIME:
0.191695
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
37.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:58:24) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/3*5

print(round(3/2*3*5 ** 1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:59:36) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 2

print(round(3/2*3*5 ** 1/3*5, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 18:59:55) 
-- CODE:
aresta = 5
area = 3/2*(3*5) ** 2

print(round(3/2*3*5 ** 2, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:00:42) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/15

print(round(3/2*3*5 ** 1/15, 4))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:00:46) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/15

print(round(3/2*3*5 ** 1/15, 4))
-- EXECUTION TIME:
0.179387
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:01:56) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/2

print(round(3/2*3*5 ** 1/2, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:03:39) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/2

print(round(3/2*3*5 ** 1/2, 4))
-- EXECUTION TIME:
0.121648
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:03:51) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/2

print(round(3/2*(3*5) ** 1/2, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:03:58) 
-- CODE:
aresta = 5
area = 3/2*(3*5)** 1/2

print(round(3/2*(3*5) ** 1/2, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:04:04) 
-- CODE:
aresta = 5
area = 3/2*(3*5)** 1/2

print(round(3/2*(3*5) ** 1/2, ))
-- OUTPUT:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:04:09) 
-- CODE:
aresta = 5
area = 3/2*(3*5)** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:04:15) 
-- CODE:
aresta = 5
area = 3/2*(3*5)** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- EXECUTION TIME:
0.137194
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:05:32) 
-- CODE:
aresta = 5
area = 3/2*(3*5) ** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:05:50) 
-- CODE:
aresta = 5
area = 3/2*(3*5) ** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:06:02) 
-- CODE:
aresta = 5
area = 3/2*(3*5) ** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:06:06) 
-- CODE:
aresta = 5
area = 3/2*(3*5) ** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- EXECUTION TIME:
0.151275
-- ERROR:
  File "/home/codebench/codes/1575/1332/main.py", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:06:15) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/2

print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 5
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:06:29) 
-- CODE:
aresta = 5
area = 3/2*3*5 ** 1/2

print(round(3/2*3*5 ** 1/2, 4)
-- ERROR:
File "XXXX", line 5
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:08:31) 
-- CODE:
print(round(3/2*(3*5) ** 1/2
-- ERROR:
File "XXXX", line 2
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:09:21) 
-- CODE:
print(round(3/2*3*5 ** 1/2
-- ERROR:
File "XXXX", line 2
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:09:45) 
-- CODE:
prinnt(3*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    prinnt(3*2)
NameError: name 'prinnt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:09:57) 
-- CODE:
print(3*2)
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:10:37) 
-- CODE:
print(round(3/2*(3*2) ** 1/2
-- ERROR:
File "XXXX", line 2
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:10:48) 
-- CODE:
print(round(3/2*(3*2) ** 1/2))
-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:11:03) 
-- CODE:
print(round(3/2*(3*2) ** 1/2, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:11:08) 
-- CODE:
print(round(3/2*(3*2) ** 1/2, 4))
-- EXECUTION TIME:
0.20091
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:11:22) 
-- CODE:
print(round(3/2*(3*5 ** 1/2, 4))
-- ERROR:
File "XXXX", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:12:33) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:12:39) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:12:44) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4))
-- EXECUTION TIME:
0.199619
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:12:58) 
-- CODE:
print(round(3/2*(3*5) ** 2, 4))
-- OUTPUT:
337.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:13:02) 
-- CODE:
print(round(3/2*(3*5) ** 2, 4))
-- EXECUTION TIME:
0.177754
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
337.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:13:23) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:13:29) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:13:32) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4))
-- EXECUTION TIME:
0.116248
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:14:25) 
-- CODE:
print(4 ** 1/2)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:14:59) 
-- CODE:
print(2/2*(2*2) ** 1/2)
-- OUTPUT:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:15:48) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4)
-- ERROR:
File "XXXX", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:15:52) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:15:54) 
-- CODE:
print(round(3/2*(3*5) ** 1/2, 4))
-- EXECUTION TIME:
0.146312
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
11.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:16:36) 
-- CODE:
print((3*5) ** 1/2)
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:18:26) 
-- CODE:
print((3*5) ** (1/2))
-- OUTPUT:
3.872983346207417
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:18:44) 
-- CODE:
print(round(3/2*(3*5) ** (1/2))
-- ERROR:
File "XXXX", line 2
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:18:49) 
-- CODE:
print(round(3/2*(3*5) ** (1/2)))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:18:59) 
-- CODE:
print(round(3/2*(3*5) ** (1/2), 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:19:28) 
-- CODE:
print(round(3/2*(3*5) ** (1/2), 4))
-- EXECUTION TIME:
0.192854
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:19:49) 
-- CODE:
print(round(3/2*(3*5) ** (1/2), 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:21:55) 
-- CODE:
print(round(3/2*(3) ** (1/2)*5 ** 2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:22:18) 
-- CODE:
print(round(3/2*5 ** 2(3) ** (1/2), 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(3/2*5 ** 2(3) ** (1/2), 4))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:22:32) 
-- CODE:
print(round(3/2*5*(3) ** (1/2), 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:22:52) 
-- CODE:
print(round(3/2*(3) ** (1/2), 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:23:10) 
-- CODE:
print(round(3/2*5 ** 2*(3) ** (1/2), 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:24:32) 
-- CODE:
print(round(3/2*(3) ** (1/2)(5) ** 2, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(3/2*(3) ** (1/2)(5) ** 2, 4))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:24:38) 
-- CODE:
print(round(3/2*(3) ** (1/2)*(5) ** 2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:24:53) 
-- CODE:
print(round(3/2*((3) ** (1/2))*5 ** 2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:24:57) 
-- CODE:
print(round(3/2*((3) ** (1/2))*5 ** 2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:26:41) 
-- CODE:
print(round(3/2*15))
-- OUTPUT:
22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:26:46) 
-- CODE:
print(round(3/2*15))
-- EXECUTION TIME:
0.143247
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
22
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:42:37) 
-- CODE:
print(round(3/2*(3 ** (1/2)*5 ** 2, 4)
-- ERROR:
File "XXXX", line 2
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:42:42) 
-- CODE:
print(round(3/2*(3 ** (1/2)*5 ** 2, 4))
-- ERROR:
File "XXXX", line 2
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:42:46) 
-- CODE:
print(round(3/2*(3 ** (1/2)*5 ** 2, 4))
-- ERROR:
File "XXXX", line 2
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:42:47) 
-- CODE:
print(round(3/2*(3 ** (1/2)*5 ** 2, 4))
-- ERROR:
File "XXXX", line 2
    
                                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:43:06) 
-- CODE:
print(round(3/2*(3 ** (1/2)*5 ** 2, 4)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(3/2*(3 ** (1/2)*5 ** 2, 4)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:43:26) 
-- CODE:
print(round(3/2*((3 ** (1/2))*5 ** 2, 4)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(3/2*((3 ** (1/2))*5 ** 2, 4)))
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:43:52) 
-- CODE:
print(round(3/2*(3 ** (1/2))
-- ERROR:
File "XXXX", line 2
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:03) 
-- CODE:
print(round(3/2*(3 ** 1/2)
-- ERROR:
File "XXXX", line 2
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:04) 
-- CODE:
print(round(3/2*(3 ** 1/2)
-- ERROR:
File "XXXX", line 2
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:08) 
-- CODE:
print(round(3/2*3 ** 1/2)
-- ERROR:
File "XXXX", line 2
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:44:15) 
-- CODE:
print(3/2*3 ** 1/2)
-- OUTPUT:
2.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:47:40) 
-- CODE:
print(3/2*(3*5 ** 5) ** 1/2)
-- OUTPUT:
7031.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:48:00) 
-- CODE:
print(3/2*(3) ** 1/2)
-- OUTPUT:
2.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:48:09) 
-- CODE:
print(3/2*(3) ** 1/2)* 5 ** 2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(3/2*(3) ** 1/2)* 5 ** 2
TypeError: unsupported operand type(s) for *: 'NoneType' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:48:24) 
-- CODE:
print((3/2*(3) ** 1/2)* 5 ** 2)
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:48:58) 
-- CODE:
print(round(3/2*(3) ** 1/2)* 5 ** 2, 4))
-- ERROR:
File "XXXX", line 1
    print(round(3/2*(3) ** 1/2)* 5 ** 2, 4))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:49:04) 
-- CODE:
print(round(3/2*(3) ** 1/2)* 5 ** 2, 4)
-- OUTPUT:
50 4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:49:07) 
-- CODE:
print(round(3/2*(3) ** 1/2)* 5 ** 2, 4)
-- EXECUTION TIME:
0.118992
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
50 4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:49:27) 
-- CODE:
print(round(3/2*3 ** (1/2)* 5 ** 2, 4)
-- ERROR:
File "XXXX", line 2
    
                                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:49:41) 
-- CODE:
print(round(3/2*((3) ** (1/2))* 5 ** 2, 4)
-- ERROR:
File "XXXX", line 2
    
                                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 19:49:47) 
-- CODE:
print(round(3/2*((3) ** (1/2))* 5 ** 2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 19:49:51) 
-- CODE:
print(round(3/2*((3) ** (1/2))* 5 ** 2, 4))
-- EXECUTION TIME:
0.227621
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
